kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sasso-webflow
  labels:
    name: sasso-webflow
