kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sasso
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  namespace: sasso
spec:
  type: LoadBalancer
  ports:
  - port: 4003
    targetPort: 4003
  selector:
    app: metrics-service
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: sasso
spec:
  type: LoadBalancer
  ports:
  - port: 4002
    targetPort: 4002
  selector:
    app: user-service
